--- a/_sass/custom/_general.scss
+++ b/_sass/custom/_general.scss
@@ -4,7 +4,7 @@ body {
   line-height: 1.8;
   font-size: 1rem;
   color: #333;
-  background-color: #fff;
+  background-color: #f7f8fa;
   margin: 0;
   padding: 0;
 }
@@ -124,4 +124,13 @@ nav,
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+/* ==============================
+   تحسين قابلية قراءة المحتوى
+   ============================== */
+
+.page__content {
+  max-width: 800px; /* تحديد أقصى عرض للمحتوى، يمكنكِ تعديل هذا الرقم كما ترين مناسباً */
+  margin-left: auto;   /* هذه الأسطر تقوم بتوسيط الحاوية في الصفحة */
+  margin-right: auto;
 }
